--- a/src/main/resources/templates/korisnik_prijava.html
+++ b/src/main/resources/templates/korisnik_prijava.html
@@ -102,6 +102,9 @@
             </tr>
             </tbody>
         </table>
+        <div class="d-flex justify-content-center gap-2">
+        <a href="javascript:history.back()" class="btn btn-outline-warning">Nazad</a>
+        </div>
     </div>
 </div>
 </body>
