JobEasy Spring Boot

--- a/src/main/resources/templates/pozicija_edit.html
+++ b/src/main/resources/templates/pozicija_edit.html
@@ -94,7 +94,7 @@
 
         <div class="button-group">
             <button type="submit" class="btn btn-outline-success">Sačuvaj</button>
-            <a href="/pozicije" class="btn btn-secondary">Nazad</a>
+            <a href="javascript:history.back()" class="btn btn-secondary">Nazad</a>
         </div>
     </form>
 </div>
