--- a/src/main/resources/templates/korisnik_prijava.html
+++ b/src/main/resources/templates/korisnik_prijava.html
@@ -84,8 +84,8 @@
                 <th>Ime</th>
                 <th>Prezime</th>
                 <th>Email</th>
-                <th>Pozicija</th>
                 <th>CV</th>
+                <th>Radnja</th>
             </tr>
             </thead>
             <tbody>
@@ -93,11 +93,14 @@
                 <td th:text="${prijava.korisnik.ime}"></td>
                 <td th:text="${prijava.korisnik.prezime}"></td>
                 <td th:text="${prijava.korisnik.email}"></td>
-                <td th:text="${prijava.pozicija.nazivPozicije}"></td>
                 <td>
                     <a th:if="${prijava.korisnik.cvFile != null}"
                        th:href="@{/cv/{filename}(filename=${prijava.korisnik.cvFile})}"
                        target="_blank">Pogledaj</a>
+                </td>
+                <td>
+                    <a href="#" class="btn btn-outline-success btn-sm">Prihvaćen</a>
+                    <a href="#" class="btn btn-outline-danger btn-sm">Odbijen</a>
                 </td>
             </tr>
             </tbody>
