--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -140,6 +140,8 @@
         </li>
         <li class="nav-item">
           <a th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" th:href="@{/korisnici/profil}" class="btn btn-outline-info">Moj profil</a>
+        </li>
+        <li class="nav-item">
           <a th:if="${#authorization.expression('hasRole(''ROLE_FIRMA'')')}" th:href="@{/firma/profil}" class="btn btn-outline-info">Moj profil</a>
         </li>
         <li class="nav-item">
