--- a/src/main/resources/templates/korisnik_prijava.html
+++ b/src/main/resources/templates/korisnik_prijava.html
@@ -52,9 +52,6 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/pozicije}">Lista pozicija</a></button>
-                </li>
                 <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
                     <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/korisnici}">Pregled korisnika</a></button>
                 </li>
@@ -99,7 +96,8 @@
                        target="_blank">Pogledaj</a>
                 </td>
                 <td>
-                    <a href="#" class="btn btn-outline-success btn-sm">Prihvaćen</a>
+                    <a th:href="@{/intervju/zakazi/{prijavaId}(prijavaId=${prijava.id})}"
+                       class="btn btn-outline-success btn-sm">Prihvaćen</a>
                     <a href="#" class="btn btn-outline-danger btn-sm">Odbijen</a>
                 </td>
             </tr>
