--- a/src/main/resources/templates/intervju_forma.html
+++ b/src/main/resources/templates/intervju_forma.html
@@ -111,6 +111,9 @@
             <label for="komentar">Komentar:</label>
             <textarea id="komentar" name="komentar" class="form-control"></textarea>
         </div>
+        <input type="hidden" name="prijavaId" th:value="*{prijava.id}"/>
+        <input type="hidden" name="korisnikId" th:value="*{prijava.korisnik.id}"/>
+
 
         <div class="text-center">
             <button class="btn btn-outline-success" type="submit">Zakaži intervju</button>
